[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pcb-forge"
version = "1.0.0"
authors = [
  { name="prtmxio", email="dhimanpritam1579@gmail.com" },
]
description = "A CLI tool to generate high-fidelity PCB renders from KiCad SVGs."
requires-python = ">=3.8"
dependencies = [
    "lxml", # This lists your library requirement
]

[project.scripts]
forge = "forge.main:main" # This creates the 'forge' command
